--- a/index.html
+++ b/index.html
@@ -2,54 +2,57 @@
 <html lang="ja">
 
 <head>
-	<meta charset="utf-8" />
-	<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="sample.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>SampleSite</title>
+  <meta charset="utf-8" />
+  <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="sample.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>SampleSite</title>
 </head>
 
 <body>
 
-	<header>
-		<h1>SamplePage</h1>
-		<nav>
-			<ul>
-				<li><a href="#info">INFO</a></li>
-				<li><a href="#about">ABOUT</a></li>
-				<li><a href="#gallery">GALLERY</a></li>
-				<li><a href="#links">LINKS</a></li>
-			</ul>
-		</nav>
-	</header>
+  <header>
+    <h1>SamplePage</h1>
+    <nav>
+      <ul id="MenuButton">
+        <li><a href="#">MENU</a></li>
+      </ul>
+      <ul id="MenuList">
+        <li><a href="#info">INFO</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#gallery">GALLERY</a></li>
+        <li><a href="#links">LINKS</a></li>
+      </ul>
+    </nav>
+  </header>
 
-	<div id="wrapper">
+  <div id="wrapper">
 
-		<section id="info">
-			<h1>info</h1>
-			<p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
-		</section>
+    <section id="info">
+      <h1>info</h1>
+      <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
+    </section>
 
-		<section id="about">
-			<h1>about</h1>
-			<p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
-		</section>
+    <section id="about">
+      <h1>about</h1>
+      <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
+    </section>
 
-		<section id="gallery">
-			<h1>gallery</h1>
-			<p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
-		</section>
+    <section id="gallery">
+      <h1>gallery</h1>
+      <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
+    </section>
 
-		<section id="links">
-			<h1>links</h1>
-			<p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
-		</section>
+    <section id="links">
+      <h1>links</h1>
+      <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
+    </section>
 
-	</div>
+  </div>
 
-	<footer>
-		&copy; http://example.com
-	</footer>
+  <footer>
+    &copy; http://example.com
+  </footer>
 
 </body>
 
