--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
   <header>
     <h1>SamplePage</h1>
     <nav>
-      <ul id="MenuButton">
-        <li><a href="#">MENU</a></li>
-      </ul>
-      <ul id="MenuList">
-        <li><a href="#info">INFO</a></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#gallery">GALLERY</a></li>
-        <li><a href="#links">LINKS</a></li>
-      </ul>
+      <div id="MenuButton">
+        <span class="MenuButtonLine"></span>
+        <span class="MenuButtonLine"></span>
+        <span class="MenuButtonLine"></span>
+      </div>
+      <div id="MenuList">
+        <ul>
+          <li><a href="#info">INFO</a></li>
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#gallery">GALLERY</a></li>
+          <li><a href="#links">LINKS</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
 
